@@ -27,6 +27,7 @@
         <file>qml/FontSelector.qml</file>
         <file>qml/Splash.qml</file>
         <file>texts/nobook.html</file>
+        <file>qml/JumpPage.qml</file>
     </qresource>
     <qresource prefix="/qml/symbian">
         <file alias="Dummy.qml">qml/Dummy.qml</file>
